Fix logo height from overflowing

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -188,6 +188,9 @@ header
       +align-items(center)
       height: 100%
 
+      .store-link
+        height: 100%
+
     img
       display: block
       height: auto
